--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 * {
   box-sizing: border-box;
 }
+header {
+  background-color: aquamarine;
+}
+article {
+  background-color: bisque;
+}
+aside {
+  background-color: rgb(213, 226, 188);
+}
+main {
+  display: flex;
+}
